@@ -1,3 +1,8 @@
+2014-06-24  Tom Tromey  <tromey@redhat.com>
+
+	* gdb.texinfo (Screen Size): Document "c" response to pagination
+	prompt.
+
 2014-06-19  Gary Benson  <gbenson@redhat.com>
 
 	* gdb.texinfo (Maintenance Commands): Document new
